[gd_scene load_steps=24 format=3 uid="uid://du042xu4xssrm"]

[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/windows_95_theme.tres" id="1_i8u7u"]
[ext_resource type="Script" uid="uid://c1qvasiiw126v" path="res://components/ui/window_frame.gd" id="2_ogx7f"]
[ext_resource type="Texture2D" uid="uid://kxqegawt4eu3" path="res://assets/logos/sigma_eye.png" id="3_kln2c"]
[ext_resource type="Texture2D" uid="uid://btg006ktyy6ip" path="res://assets/icons/icon_arrow_up.png" id="4_1v826"]
[ext_resource type="Texture2D" uid="uid://ca7daiywemk7p" path="res://assets/ui/buttons/dodger_blue_normal.png" id="4_f5uc2"]
[ext_resource type="Texture2D" uid="uid://cpph6qmmgf2p3" path="res://assets/ui/buttons/greenbuttonpressed.png" id="4_jw2h1"]
[ext_resource type="Texture2D" uid="uid://bt7khdre4vr0l" path="res://assets/ui/buttons/redbuttonpressed.png" id="4_kln2c"]
[ext_resource type="Texture2D" uid="uid://c1xnrvgtpdpyg" path="res://assets/icons/icon_minimize.png" id="5_1k2kg"]
[ext_resource type="Texture2D" uid="uid://bu12v0yfad1ai" path="res://assets/ui/buttons/lilac_normal.png" id="5_f5uc2"]
[ext_resource type="Texture2D" uid="uid://ctlorutr8vm1m" path="res://assets/ui/buttons/greenbutton.png" id="5_kl8ut"]
[ext_resource type="Texture2D" uid="uid://dgbuedoo1sjgn" path="res://assets/ui/buttons/redbutton.png" id="5_ohtq3"]
[ext_resource type="Texture2D" uid="uid://b2yvstkafcjto" path="res://assets/icons/icon_maximize.png" id="6_jw2h1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f5uc2"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_size = 7
shadow_offset = Vector2(2, 7)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f5uc2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l8046"]
texture = ExtResource("4_f5uc2")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f5uc2"]
texture = ExtResource("4_jw2h1")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_74cm5"]
texture = ExtResource("5_f5uc2")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bq65h"]
texture = ExtResource("4_jw2h1")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_afg75"]
texture = ExtResource("5_kl8ut")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6w7g6"]
texture = ExtResource("4_kln2c")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1v826"]
texture = ExtResource("4_kln2c")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1k2kg"]
texture = ExtResource("5_ohtq3")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aqsno"]
bg_color = Color(0.931993, 0.854211, 0.671275, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.907942, 0.907942, 0.907942, 1)

[node name="WindowFrame" type="PanelContainer"]
auto_translate_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_i8u7u")
theme_override_styles/panel = SubResource("StyleBoxFlat_f5uc2")
script = ExtResource("2_ogx7f")
icon = ExtResource("3_kln2c")
default_size = Vector2(350, 400)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeaderContainer" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_f5uc2")
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_l8046")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="Header" type="HBoxContainer" parent="VBoxContainer/HeaderContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_i8u7u")

[node name="Favicon" type="TextureRect" parent="VBoxContainer/HeaderContainer/MarginContainer/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderContainer/MarginContainer/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
text = "Window"
autowrap_mode = 1

[node name="TabBar" type="TabBar" parent="VBoxContainer/HeaderContainer/MarginContainer/Header"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
scrolling_enabled = false

[node name="Control" type="Control" parent="VBoxContainer/HeaderContainer/MarginContainer/Header"]
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="VBoxContainer/HeaderContainer/MarginContainer/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_f5uc2")
theme_override_styles/hover = SubResource("StyleBoxTexture_74cm5")
theme_override_styles/pressed = SubResource("StyleBoxTexture_bq65h")
theme_override_styles/normal = SubResource("StyleBoxTexture_afg75")
icon = ExtResource("4_1v826")
icon_alignment = 1

[node name="MinimizeButton" type="Button" parent="VBoxContainer/HeaderContainer/MarginContainer/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(22, 24)
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme_override_constants/icon_max_width = 16
icon = ExtResource("5_1k2kg")
icon_alignment = 1

[node name="MaximizeButton" type="Button" parent="VBoxContainer/HeaderContainer/MarginContainer/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme_override_constants/icon_max_width = 16
icon = ExtResource("6_jw2h1")
icon_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HeaderContainer/MarginContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme_override_constants/icon_max_width = 16
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_6w7g6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1v826")
theme_override_styles/normal = SubResource("StyleBoxTexture_1k2kg")
text = "x"

[node name="ContentPanel" type="ScrollContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_i8u7u")
theme_override_styles/panel = SubResource("StyleBoxFlat_aqsno")

[connection signal="pressed" from="VBoxContainer/HeaderContainer/MarginContainer/Header/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
